--- a/index.html
+++ b/index.html
@@ -86,7 +86,16 @@
 	<main class="main main_no-margin-bottom">
 		<section class="section-slider">
 			<div class="container">
-				<div class="row row-cols-3"></div>
+				<div class="row">
+					<div class="slider swiper">
+						<div class="slider__slides swiper-wrapper">
+							<div class="slider__slide swiper-slide"><img class="slider__img" src="/e69289d84fbb64358e81.webp" alt="слайд1" /></div>
+							<div class="slider__slide swiper-slide"><img class="slider__img" src="/d3c75918cee47138b86a.webp" alt="слайд2" /></div>
+						</div>
+						<div class="slider__pagination swiper-pagination"></div>
+						<div class="slider__button-next swiper-button-next"></div>
+					</div>
+				</div>
 			</div>
 		</section>
 		<div class="container">
