--- a/order-reserve.html
+++ b/order-reserve.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<meta name="theme-color" content="#678c92" />
-	<title>Личный кабинет</title>
+	<title>Оформление резерва</title>
 
 <body class="body">
 	<header class="header">
@@ -86,110 +86,9 @@
 	<main class="main">
 		<div class="container">
 			<section class="section-breadcrumbs">
-				<div class="section-breadcrumbs__inner"><a class="section-breadcrumbs__link" href="/">Главная</a><span class="section-breadcrumbs__link">/</span><span class="section-breadcrumbs__link">Личный кабинет</span></div><a class="section-breadcrumbs__back" href="#">Назад</a>
+				<div class="section-breadcrumbs__inner"><a class="section-breadcrumbs__link" href="/">Главная</a><span class="section-breadcrumbs__link">/</span><span class="section-breadcrumbs__link">Оформление резерва</span></div><a class="section-breadcrumbs__back" href="#">Назад</a>
 			</section>
 		</div>
-		<section class="section-orders-list">
-			<div class="container">
-				<div class="section-orders-list__inner">
-					<div class="section-orders-list__left">
-						<div class="card">
-							<div class="title"><span class="text text_fs-28 text_wet-asphalt">Заказ №210522/1-MT</span>
-								<h2 class="title__firm">ИП Петров Иван</h2>
-							</div>
-							<hr class="line" noshade="noshade" />
-							<div class="call">
-								<div class="summ summ_left">
-									<p class="summ__total">Итого:</p>
-									<div class="summ__total summ__total_summ">
-										<p class="summ__number summ__number_summ">6 233 944</p>
-										<p class="summ__ruble">р.</p>
-									</div>
-									<div class="summ__line"></div>
-									<p class="summ__total">≈ 4,548 т</p>
-								</div>
-								<div class="summ summ_center">
-									<p class="summ__total summ__total_bold">Всего наименований (12) на сумму 6 233 944 руб. (в том числе НДС 20%)</p>
-									<p class="summ__total summ__total_small">Сто пятьдесят восемь миллионов двести тридцать три тысячи девятьсот сорок четыре руб. 00 копеек</p>
-								</div>
-								<hr class="line__s" noshade="noshade" />
-								<div class="summ summ_right">
-									<p class="summ__total summ__total_mini">Копия документов на оплату отправлена на вашу электронную почту. В течении ближайшего времени с вами свяжеться менеджер, чтобы обсудить делали заказа.</p>
-									<div class="summ__total summ__total_wrap">
-										<div class="summ__link"><a class="summ__download" href="#">Скачать счет PDF</a><span class="summ__date">(действителен до 21.05.2022)</span></div>
-										<div class="summ__link"><a class="summ__download" href="#">Бланк заказа PDF</a><span class="summ__date">(действителен до 21.05.2022)</span></div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="card">
-							<div class="title"><span class="text text_fs-28 text_wet-asphalt">Заказ №210522/2-MT</span>
-								<h2 class="title__firm">Петров Иван</h2>
-							</div>
-							<hr class="line" noshade="noshade" />
-							<div class="call">
-								<div class="summ summ_left">
-									<p class="summ__total">Итого:</p>
-									<div class="summ__total summ__total_summ">
-										<p class="summ__number summ__number_summ">6 233 944</p>
-										<p class="summ__ruble">р.</p>
-									</div>
-									<div class="summ__line"></div>
-									<p class="summ__total">≈ 4,548 т</p>
-								</div>
-								<div class="summ summ_center">
-									<p class="summ__total summ__total_bold">Всего наименований (12) на сумму 6 233 944 руб. (в том числе НДС 20%)</p>
-									<p class="summ__total summ__total_small">Сто пятьдесят восемь миллионов двести тридцать три тысячи девятьсот сорок четыре руб. 00 копеек</p>
-								</div>
-								<hr class="line__s" noshade="noshade" />
-								<div class="summ summ_right">
-									<p class="summ__total summ__total_mini">Копия документов на оплату отправлена на вашу электронную почту. В течении ближайшего времени с вами свяжеться менеджер, чтобы обсудить делали заказа.</p>
-									<div class="summ__total summ__total_wrap">
-										<div class="summ__link"><a class="summ__download" href="#">Бланк заказа PDF</a><span class="summ__date">(действителен до 21.05.2022)</span></div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="card card_hide">
-							<div class="title"><span class="text text_fs-28 text_wet-asphalt">Заказ №210522/1-MT</span>
-								<h2 class="title__firm">ООО «Черномор»</h2>
-							</div>
-							<hr class="line" noshade="noshade" />
-							<div class="call">
-								<div class="summ summ_left">
-									<p class="summ__total">Итого:</p>
-									<div class="summ__total summ__total_summ">
-										<p class="summ__number summ__number_summ">6 233 944</p>
-										<p class="summ__ruble">р.</p>
-									</div>
-									<div class="summ__line"></div>
-									<p class="summ__total">≈ 4,548 т</p>
-								</div>
-								<div class="summ summ_center">
-									<p class="summ__total summ__total_bold">Всего наименований (12) на сумму 6 233 944 руб. (в том числе НДС 20%)</p>
-									<p class="summ__total summ__total_small">Сто пятьдесят восемь миллионов двести тридцать три тысячи девятьсот сорок четыре руб. 00 копеек</p>
-								</div>
-								<hr class="line__s" noshade="noshade" />
-								<div class="summ summ_right">
-									<p class="summ__total summ__total_mini">Копия документов на оплату отправлена на вашу электронную почту. В течении ближайшего времени с вами свяжеться менеджер, чтобы обсудить делали заказа.</p>
-									<div class="summ__total summ__total_wrap">
-										<div class="summ__link"><a class="summ__download" href="#">Скачать счет PDF</a><span class="summ__date">(действителен до 21.05.2022)</span></div>
-										<div class="summ__link"><a class="summ__download" href="#">Бланк заказа PDF</a><span class="summ__date">(действителен до 21.05.2022)</span></div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="section-orders-list__right">
-						<div class="section-orders-list__title">Личный кабинет</div>
-						<div class="section-orders-list__line"></div>
-						<form class="section-orders-list__form"><label class="section-orders-list__field-item"><input required="required" /><span>Фамилия Имя</span></label><label class="section-orders-list__field-item"><input required="required" /><span>ИНН</span></label><label class="section-orders-list__field-item"><input required="required" /><span>E-mail</span></label><label class="section-orders-list__field-item"><input required="required" /><span>Моб. телефон</span></label><button class="section-orders-list__button-password">Сменить пароль</button><button class="section-orders-list__button-data">Изменить данные</button></form>
-						<div class="section-orders-list__subtitle">Конфеденциальность личных данных</div>
-						<div class="section-orders-list__text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится.</div>
-					</div>
-				</div>
-			</div>
-		</section>
 	</main>
 	<div class="bg-footer">
 		<footer class="footer">
