--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
 <body class="body">
 	<header class="header">
 		<div class="container">
-			<div class="row align-items-xl-center">
+			<div class="row justify-content-between align-items-xl-center">
 				<div class="header__connection">
 					<div class="header__line"></div><img class="header__logo" src="/images/logo.svg" alt="логотип metaloteka" />
 					<div class="header__line"></div>
@@ -70,7 +70,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="row"><button class="header__catalog"><svg width="172" height="24" viewBox="0 0 172 24" xmlns="http://www.w3.org/2000/svg">
+			<div class="row justify-content-between"><button class="header__catalog"><svg width="172" height="24" viewBox="0 0 172 24" xmlns="http://www.w3.org/2000/svg">
 						<g fill="#555657" fill-rule="nonzero" opacity=".978">
 							<path d="M.42 23.515h7.334v-8.97h2.962c.632 0 1.166.63 1.652 1.94l2.476 7.03h7.965l-4.128-8.921c-.631-1.358-1.505-2.133-2.574-2.57v-.097c1.506-1.018 1.749-3.588 2.866-4.945.388-.437.874-.679 1.554-.679a4.36 4.36 0 0 1 1.457.242V.388C21.207.097 19.847 0 19.118 0c-2.185 0-3.545.776-4.468 1.94-2.088 2.666-1.991 7.127-4.614 7.127H7.754V.582H.42v22.933zM40.002 23.515h6.022c-.389-1.26-.389-3.103-.389-4.509V8.727C45.635 3.152 42.721 0 35.631 0c-3.643 0-6.751.873-9.47 2.23l2.282 4.606c1.651-.872 3.885-1.406 5.828-1.406 2.477 0 4.03.873 4.03 3.006v.243l-3.642.145c-2.33.097-4.42.534-6.07 1.406-2.38 1.26-3.837 3.152-3.837 6.255 0 4.412 3.302 7.515 7.819 7.515 2.865 0 4.857-1.067 6.41-2.424l1.02 1.94zm-1.7-10.23v4.267c-.534.339-1.749.824-3.351.824-1.749 0-2.866-.776-2.866-2.376 0-.97.34-1.552 1.02-1.988.632-.388 1.554-.582 2.72-.63l2.477-.097zM56.028 23.515h7.334V6.594h6.362L71.569.582H49.326v6.012h6.702zM88.907 23.515h6.022c-.388-1.26-.388-3.103-.388-4.509V8.727C94.54 3.152 91.627 0 84.536 0c-3.642 0-6.75.873-9.47 2.23l2.283 4.606c1.65-.872 3.885-1.406 5.828-1.406 2.476 0 4.03.873 4.03 3.006v.243l-3.642.145c-2.331.097-4.42.534-6.07 1.406-2.38 1.26-3.837 3.152-3.837 6.255 0 4.412 3.302 7.515 7.819 7.515 2.865 0 4.856-1.067 6.41-2.424l1.02 1.94zm-1.7-10.23v4.267c-.534.339-1.748.824-3.35.824-1.749 0-2.866-.776-2.866-2.376 0-.97.34-1.552 1.02-1.988.631-.388 1.554-.582 2.72-.63l2.476-.097zM99.446 23.855c2.817 0 4.808-.97 6.314-2.764 2.428-2.86 3.933-7.855 4.662-14.06h3.4v16.484h7.333V.582H105.03c-1.02 8-2.622 13.285-4.274 15.515-.631.873-1.36 1.26-2.234 1.26-.097 0-.485 0-.825-.096v6.4c.582.145 1.31.194 1.748.194zM137.279 24c7.139 0 12.093-5.042 12.093-12.024C149.372 4.994 144.418 0 137.279 0c-7.14 0-12.093 4.994-12.093 11.976 0 6.982 4.954 12.024 12.093 12.024zm0-5.77c-3.254 0-4.614-2.715-4.614-6.254 0-3.54 1.36-6.206 4.614-6.206 3.254 0 4.613 2.666 4.613 6.206 0 3.54-1.36 6.254-4.613 6.254zM153.403 23.515h7.333V7.03h8.693L171.42.582h-18.017z" />
 						</g>
@@ -86,7 +86,173 @@
 	<main class="main">
 		<div class="container">
 			<section class="section-breadcrumbs">
-				<div class="section-breadcrumbs__inner"><a class="section-breadcrumbs__link" href="/">Главная</a><span class="section-breadcrumbs__link">/</span><span class="section-breadcrumbs__link">Каталог</span></div><a class="section-breadcrumbs__back" href="#">Назад</a>
+				<div class="section-breadcrumbs__inner"><a class="section-breadcrumbs__link" href="/" data-popup-open="payment-entity">Главная</a><span class="section-breadcrumbs__link">/</span><span class="section-breadcrumbs__link" data-popup-open="pay-check">Каталог</span></div><a class="section-breadcrumbs__back" href="#" data-popup-open="payment">Назад</a>
+			</section>
+		</div>
+		<div class="container">
+			<section class="section-catalog">
+				<div class="section-catalog__catalog-wrapper">
+					<div class="section-catalog__left-aside">
+						<div class="section-catalog__logo"><img class="section-catalog__img" src="/images/icon-qr.svg" />
+							<div class="section-catalog__banner"><span class="section-catalog__title">Металотека</span><span class="section-catalog__subtitle">Каталог</span>
+								<div class="section-catalog__range"></div>
+							</div>
+						</div>
+						<div class="section-catalog__navigation"><a class="section-catalog__category" href="#">Трубный прокат</a><a class="section-catalog__category" href="#">Арматурный прокат</a><a class="section-catalog__category" href="#">Метизная продукция</a><a class="section-catalog__category" href="#">Листовой прокат</a><a class="section-catalog__category" href="#">Нержавеющая сталь</a><a class="section-catalog__category" href="#">Цветные металлы</a><a class="section-catalog__category" href="#">Сортовой прокат</a>
+							<div class="section-catalog__accordion-wrapper">
+								<div class="accordion-list">
+									<div class="accordion accordion_fz-20 accordion_arrow">
+										<div class="accordion__title">Листовой прокат</div>
+										<div class="accordion__body">
+											<div class="accordion-list__list-wrapper"><a class="accordion-list__link" href="">Труба профильная</a><a class="accordion-list__link" href="">Трубы в изоляции</a><a class="accordion-list__link" href="">Труба водогазопроводная оцинкованная</a><a class="accordion-list__link" href="">Трубы в изоляции</a><a class="accordion-list__link" href="">Труба магистральная</a><a class="accordion-list__link" href="">Труба Овальная</a><a class="accordion-list__link" href="">Труба профильная</a><a class="accordion-list__link" href="">Труба профильная</a></div>
+										</div>
+									</div>
+								</div>
+								<div class="accordion-list">
+									<div class="accordion accordion_fz-20 accordion_arrow">
+										<div class="accordion__title">Арматурный прокат</div>
+										<div class="accordion__body">
+											<div class="accordion-list__list-wrapper"><a class="accordion-list__link" href="">Труба профильная</a><a class="accordion-list__link" href="">Трубы в изоляции</a><a class="accordion-list__link" href="">Труба водогазопроводная оцинкованная</a><a class="accordion-list__link" href="">Трубы в изоляции</a><a class="accordion-list__link" href="">Труба магистральная</a><a class="accordion-list__link" href="">Труба Овальная</a><a class="accordion-list__link" href="">Труба профильная</a><a class="accordion-list__link" href="">Труба профильная</a></div>
+										</div>
+									</div>
+								</div>
+								<div class="accordion-list">
+									<div class="accordion accordion_fz-20 accordion_arrow">
+										<div class="accordion__title">Метизная продукция</div>
+										<div class="accordion__body">
+											<div class="accordion-list__list-wrapper"><a class="accordion-list__link" href="">Труба профильная</a><a class="accordion-list__link" href="">Трубы в изоляции</a><a class="accordion-list__link" href="">Труба водогазопроводная оцинкованная</a><a class="accordion-list__link" href="">Трубы в изоляции</a><a class="accordion-list__link" href="">Труба магистральная</a><a class="accordion-list__link" href="">Труба Овальная</a><a class="accordion-list__link" href="">Труба профильная</a><a class="accordion-list__link" href="">Труба профильная</a></div>
+										</div>
+									</div>
+								</div>
+								<div class="accordion-list">
+									<div class="accordion accordion_fz-20 accordion_arrow">
+										<div class="accordion__title">Трубный прокат</div>
+										<div class="accordion__body">
+											<div class="accordion-list__list-wrapper"><a class="accordion-list__link" href="">Труба профильная</a><a class="accordion-list__link" href="">Трубы в изоляции</a><a class="accordion-list__link" href="">Труба водогазопроводная оцинкованная</a><a class="accordion-list__link" href="">Трубы в изоляции</a><a class="accordion-list__link" href="">Труба магистральная</a><a class="accordion-list__link" href="">Труба Овальная</a><a class="accordion-list__link" href="">Труба профильная</a><a class="accordion-list__link" href="">Труба профильная</a></div>
+										</div>
+									</div>
+								</div>
+								<div class="accordion-list">
+									<div class="accordion accordion_fz-20 accordion_arrow">
+										<div class="accordion__title">Нержавеющая сталь</div>
+										<div class="accordion__body">
+											<div class="accordion-list__list-wrapper"><a class="accordion-list__link" href="">Труба профильная</a><a class="accordion-list__link" href="">Трубы в изоляции</a><a class="accordion-list__link" href="">Труба водогазопроводная оцинкованная</a><a class="accordion-list__link" href="">Трубы в изоляции</a><a class="accordion-list__link" href="">Труба магистральная</a><a class="accordion-list__link" href="">Труба Овальная</a><a class="accordion-list__link" href="">Труба профильная</a><a class="accordion-list__link" href="">Труба профильная</a></div>
+										</div>
+									</div>
+								</div>
+								<div class="accordion-list">
+									<div class="accordion accordion_fz-20 accordion_arrow">
+										<div class="accordion__title">Цветные металлы</div>
+										<div class="accordion__body">
+											<div class="accordion-list__list-wrapper"><a class="accordion-list__link" href="">Труба профильная</a><a class="accordion-list__link" href="">Трубы в изоляции</a><a class="accordion-list__link" href="">Труба водогазопроводная оцинкованная</a><a class="accordion-list__link" href="">Трубы в изоляции</a><a class="accordion-list__link" href="">Труба магистральная</a><a class="accordion-list__link" href="">Труба Овальная</a><a class="accordion-list__link" href="">Труба профильная</a><a class="accordion-list__link" href="">Труба профильная</a></div>
+										</div>
+									</div>
+								</div>
+								<div class="accordion-list">
+									<div class="accordion accordion_fz-20 accordion_arrow">
+										<div class="accordion__title">Сортовой прокат</div>
+										<div class="accordion__body">
+											<div class="accordion-list__list-wrapper"><a class="accordion-list__link" href="">Труба профильная</a><a class="accordion-list__link" href="">Трубы в изоляции</a><a class="accordion-list__link" href="">Труба водогазопроводная оцинкованная</a><a class="accordion-list__link" href="">Трубы в изоляции</a><a class="accordion-list__link" href="">Труба магистральная</a><a class="accordion-list__link" href="">Труба Овальная</a><a class="accordion-list__link" href="">Труба профильная</a><a class="accordion-list__link" href="">Труба профильная</a></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="section-catalog__mobile-description">Металлопрокат оптом и в розницу с доставкой по Москве и московской области</div>
+					</div>
+					<div class="section-catalog__right-aside">
+						<div class="product-main">
+							<div class="product-main__wrapper"><span class="product-main__title">Трубный прокат</span>
+								<div class="product-main__range"></div>
+								<div class="product-main__information-block">
+									<div class="accordion-list">
+										<div class="accordion accordion_fz-20 accordion_reset">
+											<div class="accordion__title">Труба профильная (158)</div>
+											<div class="accordion__body">
+												<div class="accordion-list__list-wrapper"><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a></div>
+											</div>
+										</div>
+									</div>
+									<div class="accordion-list">
+										<div class="accordion accordion_fz-20 accordion_reset">
+											<div class="accordion__title">Труба профильная (158)</div>
+											<div class="accordion__body">
+												<div class="accordion-list__list-wrapper"><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a></div>
+											</div>
+										</div>
+									</div>
+									<div class="accordion-list">
+										<div class="accordion accordion_fz-20 accordion_reset">
+											<div class="accordion__title">Труба профильная (158)</div>
+											<div class="accordion__body">
+												<div class="accordion-list__list-wrapper"><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a></div>
+											</div>
+										</div>
+									</div>
+									<div class="accordion-list">
+										<div class="accordion accordion_fz-20 accordion_reset">
+											<div class="accordion__title">Труба профильная (158)</div>
+											<div class="accordion__body">
+												<div class="accordion-list__list-wrapper"><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a></div>
+											</div>
+										</div>
+									</div>
+									<div class="accordion-list">
+										<div class="accordion accordion_fz-20 accordion_reset">
+											<div class="accordion__title">Труба профильная (158)</div>
+											<div class="accordion__body">
+												<div class="accordion-list__list-wrapper"><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a></div>
+											</div>
+										</div>
+									</div>
+									<div class="accordion-list">
+										<div class="accordion accordion_fz-20 accordion_reset">
+											<div class="accordion__title">Труба профильная (158)</div>
+											<div class="accordion__body">
+												<div class="accordion-list__list-wrapper"><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a></div>
+											</div>
+										</div>
+									</div>
+									<div class="accordion-list">
+										<div class="accordion accordion_fz-20 accordion_reset">
+											<div class="accordion__title">Труба профильная (158)</div>
+											<div class="accordion__body">
+												<div class="accordion-list__list-wrapper"><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a><a class="accordion-list__link" href="">Труба профильная прямоугольная</a></div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="product-tags">
+							<div class="product-tags__tags-wrapper"><a class="product-tags__tag" href="#">Труба профильная</a><a class="product-tags__tag" href="#">Профильная</a><a class="product-tags__tag" href="#">Труба 8мм</a><a class="product-tags__tag" href="#">Труба 8мм</a><a class="product-tags__tag" href="#">уголок</a><a class="product-tags__tag" href="#">лента</a><a class="product-tags__tag" href="#">плита</a><a class="product-tags__tag" href="#">шестигранник</a></div>
+						</div>
+						<div class="product-footer">
+							<div class="product-footer__footer-wrapper"><img class="product-footer__qr" src="/images/icon-qr.svg" />
+								<div class="contact-information-footer">
+									<div class="contact-information-footer__name"><span class="contact-information-footer__title">Metaloteka</span>
+										<div class="contact-information-footer__sub-title">Металлопрокат оптом и в розницу</div>
+										<div class="contact-information-footer__range"></div>
+										<p class="contact-information-footer__text">QR-код для загрузки реквизитов в мобильное приложение банка</p>
+									</div>
+								</div>
+								<div class="contact-information-footer">
+									<div class="contact-information-footer__name"><a class="contact-information-footer__link" href="tel:+74955456420">+7 495 545 64 20</a>
+										<div class="contact-information-footer__range"></div>
+										<p class="contact-information-footer__text">Телефон клиентской поддержки</p>
+										<p class="contact-information-footer__text contact-information-footer__text_bold">Онлайн заявки и заказы обрабатываем с 9:00-18:00</p>
+									</div>
+								</div>
+								<div class="contact-information-footer">
+									<div class="contact-information-footer__name"><a class="contact-information-footer__link" href="mailto:info@metaloteka.ru">info@metaloteka.ru</a>
+										<div class="contact-information-footer__range"></div>
+										<p class="contact-information-footer__text">Напишите нам и мы постараемся ответить на все ваши вопросы</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</section>
 		</div>
 	</main>
