--- a/order-processing.html
+++ b/order-processing.html
@@ -13,7 +13,7 @@
 <body class="body">
 	<header class="header">
 		<div class="container">
-			<div class="row align-items-xl-center">
+			<div class="row justify-content-between align-items-xl-center">
 				<div class="header__connection">
 					<div class="header__line"></div><img class="header__logo" src="/images/logo.svg" alt="логотип metaloteka" />
 					<div class="header__line"></div>
@@ -70,7 +70,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="row"><button class="header__catalog"><svg width="172" height="24" viewBox="0 0 172 24" xmlns="http://www.w3.org/2000/svg">
+			<div class="row justify-content-between"><button class="header__catalog"><svg width="172" height="24" viewBox="0 0 172 24" xmlns="http://www.w3.org/2000/svg">
 						<g fill="#555657" fill-rule="nonzero" opacity=".978">
 							<path d="M.42 23.515h7.334v-8.97h2.962c.632 0 1.166.63 1.652 1.94l2.476 7.03h7.965l-4.128-8.921c-.631-1.358-1.505-2.133-2.574-2.57v-.097c1.506-1.018 1.749-3.588 2.866-4.945.388-.437.874-.679 1.554-.679a4.36 4.36 0 0 1 1.457.242V.388C21.207.097 19.847 0 19.118 0c-2.185 0-3.545.776-4.468 1.94-2.088 2.666-1.991 7.127-4.614 7.127H7.754V.582H.42v22.933zM40.002 23.515h6.022c-.389-1.26-.389-3.103-.389-4.509V8.727C45.635 3.152 42.721 0 35.631 0c-3.643 0-6.751.873-9.47 2.23l2.282 4.606c1.651-.872 3.885-1.406 5.828-1.406 2.477 0 4.03.873 4.03 3.006v.243l-3.642.145c-2.33.097-4.42.534-6.07 1.406-2.38 1.26-3.837 3.152-3.837 6.255 0 4.412 3.302 7.515 7.819 7.515 2.865 0 4.857-1.067 6.41-2.424l1.02 1.94zm-1.7-10.23v4.267c-.534.339-1.749.824-3.351.824-1.749 0-2.866-.776-2.866-2.376 0-.97.34-1.552 1.02-1.988.632-.388 1.554-.582 2.72-.63l2.477-.097zM56.028 23.515h7.334V6.594h6.362L71.569.582H49.326v6.012h6.702zM88.907 23.515h6.022c-.388-1.26-.388-3.103-.388-4.509V8.727C94.54 3.152 91.627 0 84.536 0c-3.642 0-6.75.873-9.47 2.23l2.283 4.606c1.65-.872 3.885-1.406 5.828-1.406 2.476 0 4.03.873 4.03 3.006v.243l-3.642.145c-2.331.097-4.42.534-6.07 1.406-2.38 1.26-3.837 3.152-3.837 6.255 0 4.412 3.302 7.515 7.819 7.515 2.865 0 4.856-1.067 6.41-2.424l1.02 1.94zm-1.7-10.23v4.267c-.534.339-1.748.824-3.35.824-1.749 0-2.866-.776-2.866-2.376 0-.97.34-1.552 1.02-1.988.631-.388 1.554-.582 2.72-.63l2.476-.097zM99.446 23.855c2.817 0 4.808-.97 6.314-2.764 2.428-2.86 3.933-7.855 4.662-14.06h3.4v16.484h7.333V.582H105.03c-1.02 8-2.622 13.285-4.274 15.515-.631.873-1.36 1.26-2.234 1.26-.097 0-.485 0-.825-.096v6.4c.582.145 1.31.194 1.748.194zM137.279 24c7.139 0 12.093-5.042 12.093-12.024C149.372 4.994 144.418 0 137.279 0c-7.14 0-12.093 4.994-12.093 11.976 0 6.982 4.954 12.024 12.093 12.024zm0-5.77c-3.254 0-4.614-2.715-4.614-6.254 0-3.54 1.36-6.206 4.614-6.206 3.254 0 4.613 2.666 4.613 6.206 0 3.54-1.36 6.254-4.613 6.254zM153.403 23.515h7.333V7.03h8.693L171.42.582h-18.017z" />
 						</g>
@@ -86,7 +86,7 @@
 	<main class="main">
 		<div class="container">
 			<section class="section-breadcrumbs">
-				<div class="section-breadcrumbs__inner"><a class="section-breadcrumbs__link" href="/">Главная</a><span class="section-breadcrumbs__link">/</span><span class="section-breadcrumbs__link">Оформление заказа</span></div><a class="section-breadcrumbs__back" href="#">Назад</a>
+				<div class="section-breadcrumbs__inner"><a class="section-breadcrumbs__link" href="/" data-popup-open="payment-entity">Главная</a><span class="section-breadcrumbs__link">/</span><span class="section-breadcrumbs__link" data-popup-open="pay-check">Оформление заказа</span></div><a class="section-breadcrumbs__back" href="#" data-popup-open="payment">Назад</a>
 			</section>
 		</div>
 	</main>
@@ -136,6 +136,128 @@
 				</div>
 			</div>
 		</footer>
+	</div>
+	<div class="popup" data-popup="payment">
+		<div class="popup-payment popup__body">
+			<div class="popup-payment__title">
+				<h2 class="popup-payment__order">Оплата резерва №210522/1-RSRV</h2>
+				<h2 class="popup-payment__firm">ИП Петров Иван</h2>
+			</div>
+			<hr class="popup-payment__line" noshade="noshade" />
+			<div class="popup-payment__call">
+				<div class="popup-payment__summ popup-payment__summ_left">
+					<p class="popup-payment__total">Итого:</p>
+					<div class="popup-payment__total popup-payment__total_summ">
+						<p class="popup-payment__number popup-payment__number_summ">64 000</p>
+						<p class="popup-payment__ruble">р.</p>
+					</div>
+					<div class="popup-payment__trait"></div>
+					<p class="popup-payment__total popup-payment__total_days">14 дней</p>
+				</div>
+				<div class="popup-payment__summ popup-payment__summ_center">
+					<p class="popup-payment__total popup-payment__total_bold">Всего наимнований (1) на сумму 64 000 руб. (в том числе НДС 20%)</p>
+					<p class="popup-payment__total popup-payment__total_small">Сто пятьдесят восемь миллионов двести тридцать три тысячи девятьсот сорок четыре руб. 00 копеек</p>
+				</div>
+				<div class="popup-payment__summ popup-payment__summ_right">
+					<p class="popup-payment__total popup-payment__total_mini">Копия документов на оплату отправлена на вашу электронную почту. В течении ближайшего времени с вами свяжеться менеджер, чтобы обсудить делали заказа.</p>
+					<div class="popup-payment__total popup-payment__total_wrap">
+						<div class="popup-payment__link"><a class="popup-payment__download" href="!#">Скачать счет PDF</a><span class="popup-payment__date">(действителен до 21.05.2022)</span></div>
+						<div class="popup-payment__link"><a class="popup-payment__download" href="!#">Бланк резерва PDF</a><span class="popup-payment__date">(действителен до 21.05.2022)</span></div>
+					</div>
+				</div>
+			</div>
+			<div class="popup-payment__button"><button class="popup-payment__pay">Оплатить по счету</button><button class="popup-payment__pay">Оплатить онлайн</button><button class="popup-payment__pay">Оплатить в офисе</button></div>
+			<hr class="popup-payment__line popup-payment__line_button" noshade="noshade" />
+			<div class="popup-payment__inform">
+				<h2 class="popup-payment__subtitle"></h2>
+				<p class="popup-payment__text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие. Цены не являются публичной офертой, содержит ориентировочный уровень цен. Окончательную цену (и уровень скидок) - оговаривайте с менеджером. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие.</p><span class="popup-payment__scroll">Развернуть</span>
+			</div><button class="popup__close">Закрыть</button>
+		</div>
+	</div>
+	<div class="popup" data-popup="payment-entity">
+		<div class="popup-payment popup__body">
+			<div class="popup-payment__title">
+				<h2 class="popup-payment__order">Оплата резерва №210522/1-RSRV</h2>
+				<h2 class="popup-payment__firm">ИП Петров Иван</h2>
+			</div>
+			<hr class="popup-payment__line" noshade="noshade" />
+			<div class="popup-payment__call">
+				<div class="popup-payment__summ popup-payment__summ_left">
+					<p class="popup-payment__total">Итого:</p>
+					<div class="popup-payment__total popup-payment__total_summ">
+						<p class="popup-payment__number popup-payment__number_summ">64 000</p>
+						<p class="popup-payment__ruble">р.</p>
+					</div>
+					<div class="popup-payment__trait"></div>
+					<p class="popup-payment__total popup-payment__total_days">≈ 4,548 т</p>
+				</div>
+				<div class="popup-payment__summ popup-payment__summ_center">
+					<p class="popup-payment__total popup-payment__total_bold">Всего наимнований (1) на сумму 64 000 руб. (в том числе НДС 20%)</p>
+					<p class="popup-payment__total popup-payment__total_small">Сто пятьдесят восемь миллионов двести тридцать три тысячи девятьсот сорок четыре руб. 00 копеек</p>
+				</div>
+				<div class="popup-payment__summ popup-payment__summ_right">
+					<p class="popup-payment__total popup-payment__total_mini">Копия документов на оплату отправлена на вашу электронную почту. В течении ближайшего времени с вами свяжеться менеджер, чтобы обсудить делали заказа.</p>
+					<div class="popup-payment__total popup-payment__total_wrap">
+						<div class="popup-payment__link"><a class="popup-payment__download" href="!#">Скачать счет PDF</a><span class="popup-payment__date">(действителен до 21.05.2022)</span></div>
+						<div class="popup-payment__link"><a class="popup-payment__download" href="!#">Бланк резерва PDF</a><span class="popup-payment__date">(действителен до 21.05.2022)</span></div>
+					</div>
+				</div>
+			</div>
+			<div class="popup-payment__button"><button class="popup-payment__pay">Оплатить по счету</button><button class="popup-payment__pay" disabled="disabled">Оплатить онлайн</button><button class="popup-payment__pay">Оплатить в офисе</button></div>
+			<hr class="popup-payment__line popup-payment__line_button" noshade="noshade" />
+			<div class="popup-payment__inform">
+				<h2 class="popup-payment__subtitle"></h2>
+				<p class="popup-payment__text">Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие. Цены не являются публичной офертой, содержит ориентировочный уровень цен. Окончательную цену (и уровень скидок) - оговаривайте с менеджером. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. Резерв товаров из вашего списка товаров на складе сроком на 14 суток. Приобретая услугу Вы соглашаетесь с тем, что стоимость товара на момент окончания срока резерва может изменится. По окончанию срока резерва товара на складе мы не гарантируем его последующее наличие.</p><span class="popup-payment__scroll">Развернуть</span>
+			</div><button class="popup__close">Закрыть</button>
+		</div>
+	</div>
+	<div class="popup" data-popup="pay-method">
+		<div class="popup-pay-method popup__body">
+			<div class="popup-pay-method__title">
+				<h2 class="popup-pay-method__method">Способы оплаты</h2>
+				<h2 class="popup-pay-method__order">Оплата резерва</h2>
+				<h2 class="popup-pay-method__order">№210522/1-RSRV</h2>
+				<p class="popup-pay-method__summ">64 000.00 руб.</p>
+			</div>
+			<hr class="popup-pay-method__line" noshade="noshade" />
+			<div class="popup-pay-method__pay"><img class="popup-pay-method__logo" src="/images/logo-card-popup.svg" />
+				<p class="popup-pay-method__name">Банковская карта</p><img class="popup-pay-method__arrow" src="/images/arrow-popup-dark.svg" />
+			</div>
+			<hr class="popup-pay-method__line" noshade="noshade" />
+			<div class="popup-pay-method__pay"><img class="popup-pay-method__logo" src="/images/logo-sbp-popup.svg" />
+				<p class="popup-pay-method__name">Система быстрых платежей</p><img class="popup-pay-method__arrow" src="/images/arrow-popup-dark.svg" />
+			</div>
+			<hr class="popup-pay-method__line" noshade="noshade" />
+			<div class="popup-pay-method__pay"><img class="popup-pay-method__logo" src="/images/logo-sberbank-popup.svg" />
+				<p class="popup-pay-method__name">Сбербэй от Сбербанка</p><img class="popup-pay-method__arrow" src="/images/arrow-popup-dark.svg" />
+			</div>
+			<hr class="popup-pay-method__line" noshade="noshade" />
+			<p class="popup-pay-method__mini">Выбирая способ оплаты вы соглашаетесь с условиями платежных систем и способов оплаты вашего заказа. После успешной оплаты с вами свяжеться наш менеджер для уточнения деталей.</p><button class="popup__close">Закрыть</button>
+		</div>
+	</div>
+	<div class="popup" data-popup="pay-check">
+		<div class="popup-pay-check popup__body">
+			<div class="popup-pay-check__title">
+				<h2 class="popup-pay-check__method">Оплата по счету</h2>
+				<h2 class="popup-pay-check__order">Оплата заказа</h2>
+				<h2 class="popup-pay-check__order">№210522/1-MT</h2>
+				<p class="popup-pay-check__order">ИП Петров Иван</p>
+				<p class="popup-pay-check__summ">64 000.00 руб.</p>
+			</div>
+			<hr class="popup-pay-check__line" noshade="noshade" />
+			<p class="text text_fs-32 text_wet-asphalt text_fw-bold popup-pay-check__inform-docs">Документы на оплату отправлены на ваш e-mail</p>
+			<p class="text text_fs-20 text_wet-asphalt popup-pay-check__email">ivanov.ivan@yandex.ru</p>
+			<div class="popup-pay-check__link"><a class="popup-pay-check__download" href="!#">Скачать счет PDF</a><span class="popup-pay-check__date">(действителен до 21.05.2022)</span></div>
+			<div class="popup-pay-check__link"><a class="popup-pay-check__download" href="!#">Бланк резерва PDF</a><span class="popup-pay-check__date">(действителен до 21.05.2022)</span></div>
+			<p class="text text_small text_wet-asphalt popup-pay-check__text-inform">Копия документов на оплату отправлена на вашу электронную почту. В течении ближайшего времени с вами свяжеться менеджер, чтобы обсудить делали заказа.</p><button class="popup__close">Закрыть</button>
+		</div>
+	</div>
+	<div class="popup" data-popup="pay-thanks">
+		<div class="popup-pay-check popup__body">
+			<p class="text text_fs-32 text_wet-asphalt text_fw-bold popup-pay-check__inform-docs-thanks">Спасибо за заказ!</p>
+			<p class="text text_fs-20 text_light-slate-gray text_fw-bold popup-pay-check__email-thanks">ivanov.ivan@yandex.ru</p>
+			<p class="text text_fs-20 text_wet-asphalt popup-pay-check__text-inform-thanks">В ближайшее время с вами свяжется наш менеджер для уточнения деталей!</p><button class="popup__close">Закрыть</button>
+		</div>
 	</div>
 	<script defer="defer" src="/js/app.js"></script>
 </body>
